{
    "name": "PlayerFarmingInputAction",
    "maps": [
        {
            "name": "Farming",
            "id": "ae710741-ffde-4acc-81f0-31ef553f41de",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "646398b1-7fde-4d86-bcdb-65fe58e27f7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot01",
                    "type": "Button",
                    "id": "b0268285-3b66-4789-89fa-f00a88f5cdcf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot02",
                    "type": "Button",
                    "id": "dedf43a0-fcd9-4624-8dd3-1b66d2a0fa87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot03",
                    "type": "Button",
                    "id": "79ad27a9-4da7-4f55-bee1-9c3aed6fceb0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot04",
                    "type": "Button",
                    "id": "ac5bf7b6-c640-47c5-b256-ead5141155e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot05",
                    "type": "Button",
                    "id": "525c321b-d638-4fa5-bf7f-19f7951eb449",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot06",
                    "type": "Button",
                    "id": "1034767f-4841-4d2a-922e-57a1e4ca86d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot07",
                    "type": "Button",
                    "id": "c883c651-ac10-4067-8621-e44f5d2f1e1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot08",
                    "type": "Button",
                    "id": "0cd8bca7-5b3d-4500-a5c6-8a7e13cef1a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot09",
                    "type": "Button",
                    "id": "02757f6e-40be-4a5f-8aa5-5793984fad96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tab",
                    "type": "Button",
                    "id": "2fd93813-6afa-4f4f-b1ea-c25af4d0dda5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftShift",
                    "type": "Button",
                    "id": "e27fe967-97d7-4fb3-a4ed-d8085e21a028",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spacebar",
                    "type": "Button",
                    "id": "99c5c383-4962-4168-9ca1-c8f5125a5c35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "972a7e63-919a-4d6b-9e48-51ad7fd45e02",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "297eb8de-0344-476c-ae13-886f7c89493c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot01",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bc8276c-7e26-4445-b25f-f59b54cb336b",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot02",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84e25250-1c1d-412d-82a9-51db28d9940c",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot03",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "175f7511-d2d1-4ce6-baff-7994359cf782",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot04",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b88a86fb-9c16-4621-baf1-d39ce0cf8402",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot05",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31ad1cd2-d20a-45f7-8403-5b37d567f988",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot06",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be2215ce-01f5-4b9f-91ad-237e2ae3e048",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot07",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f91c6f1c-434b-4f6c-bc25-695f8b6d36ce",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot08",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e59d0f6-4084-4f32-9543-db5dd4da0454",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c077020-e681-4cf0-a03e-d6c5301426a5",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot09",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f072738-d91f-4c7e-a1ac-028c6ab76cf6",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftShift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "385e0fe0-26df-4349-8622-369c4933aed0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spacebar",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}